Passing the vpnservice.builder's FD to the cjdns.socket